[package]
name = "netrixclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }